Bug 184152 - Pager no longer shows desktop names, nor numbers
Summary: Pager no longer shows desktop names, nor numbers
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-12 15:48 UTC by Alain Knaff
Modified: 2009-03-01 13:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alain Knaff 2009-02-12 15:48:56 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Fedora RPMs

In Kde 4.2.0, the pager no longer shows the names of virtual desktops, even when choosing "Desktop name" in Pager Settings.

However, when choosing "Desktop name" it makes the boxes representing the desktops wide enough to contain the name (rather than small squares as with "Desktop number"). So it seems to be taking the choice into account at least partly (make enough space for name, but then "forget" to actually display it).

And it's not as if the display was broken, because window outlines do show up.
Comment 1 FiNeX 2009-02-13 21:08:24 UTC
Confirmed in current trunk too (r925484)
Comment 2 Lukáš Tinkl 2009-02-14 20:20:54 UTC
Confirmed, 4.2.0 here
Comment 3 Tony O'Bryan 2009-02-18 15:30:25 UTC
This is happening to me as well.  Stock 4.2.0 on Kubuntu 8.10.
Comment 4 Artur Souza (MoRpHeUz) 2009-02-28 01:50:05 UTC
It happens because the widget doesnt have enough size to show the labels. If you increase the height it will show the labels. Maybe we need to check the values...
Comment 5 Artur Souza (MoRpHeUz) 2009-02-28 03:46:36 UTC
SVN commit 933129 by asouza:

For the default size of the panel we can allow this "one pixel"
offset on the bottom. The applet is so small that you almost
can't see the offset and this brings back the labels for the
panel's default size.

For bigger sizes it works perfectly. Anyway, a better solution
is welcome ;) We don't like dealing with 'magical math'.

BUG:184152


 M  +7 -2      pager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=933129
Comment 6 Alain Knaff 2009-03-01 13:44:41 UTC
Indeed, that was it. Making the panel slightly bigger solved the issue.
Thanks