For the default size of the panel we can allow this "one pixel" offset on the bottom. The applet is so small that you almost can't see the offset and this brings back the labels for the panel's default size.

For bigger sizes it works perfectly. Anyway, a better solution
is welcome ;) We don't like dealing with 'magical math'.

BUG:184152

svn path=/trunk/KDE/kdebase/workspace/; revision=933129